2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/goom/goomsl_heap.c: (align_it):
	* gst/goom/plugin_info.c: (setOptimizedMethods):
	  Compile fixes for x86-64.

2008-02-23  Bastien Nocera  <hadess@hadess.net>

	* gst/goom/Makefile.am: Don't compile lex or yacc outputs
	with warnings, but add other CFLAGS

	* gst/goom/goomsl.c (gsl_instr_set_namespace),
	(gsl_instr_add_param), (iflow_execute), (gsl_enternamespace),
	(calculate_labels), (gsl_read_file):
	* gst/goom/goomsl_lex.l:
	* gst/goom/goomsl_yacc.y:
	* gst/goom/plugin_info.c: Remove a few live printf, and
	fprintf, replace exit() calls with g_assert_not_reached()
	if it not optimal for a library

2008-02-23  Bastien Nocera  <hadess@hadess.net>

	* gst/goom/Makefile.am: Remove the warnings being disabled,
	fix linkage on x86, spotted by Sebastian Dröge
	<slomo@circular-chaos.org>

	* gst/goom/convolve_fx.c (convolve_init),
	(create_output_with_brightness), (convolve_apply):
	* gst/goom/filters.c (zoomFilterVisualFXWrapper_create):
	* gst/goom/goomsl.c:
	* gst/goom/ifs.c (ifs_update), (ifs_visualfx_create):
	* gst/goom/plugin_info.c:
	* gst/goom/tentacle3d.c (tentacle_fx_create):
	Fix warnings, and disable the motifs in the convolve_fx
	plugin (they were causing warnings, and they were just
	"Goom" in funny letterring)

2008-02-23  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Add checks for Flex/Yacc/Bison and other
	furry animals, for the new goom 2k4 based plugin

	* gst/goom/*: Update to use goom 2k4, uses liboil to detect
	CPU optimisations (not working yet), move the old plugin to...

	* gst/goom2k1/*: ... here, in case somebody is sick enough

	Fixes #515073

2008-02-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_setup_streams):
	Post the server response code in an error message instead of a generic
	'error' message. Fixes #517237.

2008-02-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/Makefile.am: